# Testing-bazaar

./: Cargo.toml  README.md  VpsSocket.cs  blacklist.txt  fetch.js  fetch2.js  fetch3.js  fetch4.js  frikadellen-baf-121  index.html  metadata.json  parse_test.js  parse_test.rs  parse_test_2.rs  script.js
.github/workflows/: ci.yml  pages.yml  release.yml
src/: bazaar_tracker.rs  lib.rs  loader.rs  main.rs  profit.rs  types.rs  webhook.rs
src/bot/: README.md  client.rs  handlers.rs  mod.rs
src/config/: loader.rs  mod.rs  types.rs
src/gui/: mod.rs  slot_manager.rs  window_handler.rs
src/handlers/: bazaar_flip_handler.rs  flip_handler.rs  mod.rs
src/inventory/: manager.rs  mod.rs
src/logging/: logger.rs
src/state/: command_queue.rs  manager.rs  mod.rs
src/utils/: mod.rs  process.rs  string.rs
src/vps/: mod.rs  socket.rs  types.rs
src/web/: mod.rs  og_image.rs  panel.html  server.rs
src/websocket/: client.rs  messages.rs  mod.rs
webpage/: CNAME  index.html  script.js  style.css
